--- a/scss/_pages.scss
+++ b/scss/_pages.scss
@@ -1,5 +1,5 @@
 body {
-    overflow: hidden !important;
+    overflow-x: hidden !important;
 }
 
 .business-listing {
